--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.568.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "serverless-http": "^2.3.0"
+    "serverless-http": "^2.3.0",
+    "serverless-offline": "^5.12.0"
   }
 }
